src/test/ui/target-feature-wrong.stderr
warning: #[target_feature = ".."] is deprecated and will eventually be removed, use #[target_feature(enable = "..")] instead
  --> $DIR/target-feature-wrong.rs:18:1
   |
LL | #[target_feature = "+sse2"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the feature named `foo` is not valid for this target
  --> $DIR/target-feature-wrong.rs:20:18
   |
LL | #[target_feature(enable = "foo")]
   |                  ^^^^^^^^^^^^^^

error: #[target_feature(..)] only accepts sub-keys of `enable` currently
  --> $DIR/target-feature-wrong.rs:22:18
   |
LL | #[target_feature(bar)]
   |                  ^^^

error: #[target_feature(..)] only accepts sub-keys of `enable` currently
  --> $DIR/target-feature-wrong.rs:24:18
   |
LL | #[target_feature(disable = "baz")]
   |                  ^^^^^^^^^^^^^^^

error: #[target_feature(..)] can only be applied to `unsafe` function
  --> $DIR/target-feature-wrong.rs:28:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: attribute should be applied to a function
  --> $DIR/target-feature-wrong.rs:32:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | //~^ ERROR: should be applied to a function
LL | mod another {}
   | -------------- not a function

error: aborting due to 5 previous errors

